--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div id="app">
     <div class="card border-0 text-center" style="color: #07c160">
       <div class="card-body">
-        <h2 class="card-title" style="font-size: 1.8em;">临时人员进门登记</h2>
+        <h2 class="card-title" style="font-size: 1.8em;">沈航学生出门登记</h2>
 
         <i class="animated infinite pulse fa p-4">
           <div class="box">
