--- a/cx/index.html
+++ b/cx/index.html
@@ -173,3 +173,12 @@
 </body>
 
 </html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCEMC500Y3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCEMC500Y3');
+</script>
