--- a/jx/index.html
+++ b/jx/index.html
@@ -1,23 +1,7 @@
 <html lang="zh-CN">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-YH8CSFGQ4Q"></script> -->
-  <!-- <script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'G-YH8CSFGQ4Q');
-
-    gtag('event', 'screen_view', {
-      'app_name': 'saufaker',
-      'screen_name': '进校页'
-    }); -->
-  <!-- </script> -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
@@ -222,3 +206,12 @@
 </body>
 
 </html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCEMC500Y3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCEMC500Y3');
+</script>
