--- a/cx/index.html
+++ b/cx/index.html
@@ -45,7 +45,7 @@
 <body>
 
   <div id="app">
-    <div class="card border-0 text-center" style="color: #07c160">
+    <div class="card border-0 text-center" style="color: #66CAFB">
       <div class="card-body">
         <h2 class="card-title" style="font-size: 1.8em;">沈航学生出门登记</h2>
 
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <ul class="list-group list-group-flush" style="background-color: #07c160">
+    <ul class="list-group list-group-flush" style="background-color: #66CAFB">
       <li class="list-group-item bg-transparent d-flex text-white font-weight-bold">
         <div style="min-width: 4em; text-align-last: justify;">姓名</div>：<div id='xm' contenteditable="true">陈调元</div>
       </li>
