--- a/jx/index.html
+++ b/jx/index.html
@@ -75,7 +75,7 @@
 
 <body>
   <div id="app">
-    <div class="card border-0 text-center" style="color: #07c160">
+    <div class="card border-0 text-center" style="color: #66CAFB">
       <div class="card-body">
         <h2 class="card-title" style="font-size: 1.8em;">沈航学生进门登记</h2>
 
@@ -92,7 +92,7 @@
         <p class="card-text" style="font-size: 1.4em;"> </p>
       </div>
     </div>
-    <ul class="list-group list-group-flush" style="background-color: #07c160">
+    <ul class="list-group list-group-flush" style="background-color: #66CAFB">
       <li class="list-group-item bg-transparent d-flex text-white font-weight-bold">
         <div style="min-width: 4em; text-align-last: justify;">
           姓名
