--- a/cx/index.html
+++ b/cx/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <ul class="list-group list-group-flush" style="background-color: #66CAFB">
+    <ul class="list-group list-group-flush" style="background-color: #07c160">
       <li class="list-group-item bg-transparent d-flex text-white font-weight-bold">
         <div style="min-width: 4em; text-align-last: justify;">姓名</div>：<div id='xm' contenteditable="true">陈调元</div>
       </li>
