--- a/jx/index.html
+++ b/jx/index.html
@@ -92,7 +92,7 @@
         <p class="card-text" style="font-size: 1.4em;"> </p>
       </div>
     </div>
-    <ul class="list-group list-group-flush" style="background-color: #66CAFB">
+    <ul class="list-group list-group-flush" style="background-color: #07c160">
       <li class="list-group-item bg-transparent d-flex text-white font-weight-bold">
         <div style="min-width: 4em; text-align-last: justify;">
           姓名
