--- a/cx/index.html
+++ b/cx/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-moble-web-app-status-bar-style" content="black-translucent" />
   <title>沈阳航空航天大学出入登记</title>
   <link href="./cc.css" rel="stylesheet" type="text/css">
   <style>
