--- a/jx/index.html
+++ b/jx/index.html
@@ -9,13 +9,14 @@
   <meta name="apple-moble-web-app-status-bar-style" content="black-translucent" />
 
   <meta name="csrf-token" content="vXqNKnW2bbvLKBhahgFJNeE4f6ZkUNOzjRP0PGb1">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBYDWT403J"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GQXVVYYMJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-FBYDWT403J');
+    gtag('config', 'G-5GQXVVYYMJ');
   </script>
   <title>
     沈阳航空航天大学出入登记
