--- a/cx/index.html
+++ b/cx/index.html
@@ -11,13 +11,13 @@
   <title>沈阳航空航天大学出入登记</title>
   <link href="./cc.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBYDWT403J"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GQXVVYYMJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-FBYDWT403J');
+    gtag('config', 'G-5GQXVVYYMJ');
   </script>
   <style>
     @-webkit-keyframes pulse {
