remove cx.html footer

--- a/cx/index.html
+++ b/cx/index.html
@@ -101,50 +101,9 @@
     <div align="center" class="STYLE2">信息网络中心提供相关技术支持</div>
 
   </div>
-  <p>
-    <img src="./cc2.png">
-  </p>
-  <p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  <form name="Costum" onsubmit="return applyForm()" target="posthere">
-    姓名:<br>
-    <input type="text" name="XM" value="后约饭">
-    <br>
-    学号:<br>
-    <input type="text" name="SH" value="18140530">
-    <br>
-    电话:<br>
-    <input type="text" name="DH" value="13110447820">
-    <br>
-    状态:<br>
-    <select class="dropdown-select" name="select_ic">
-      <option value="cc8">白底蓝直</option>
-      <option value="cc5">白底绿斜</option>
-      <option value="cc4">白底绿直</option>
-      <option value="cc1">绿底白斜</option>
-      <option value="cc1">绿底白直</option>
-      <option value="ccs">蓝底绿直</option>
-    </select>
-    <br>
-    <br>
-    <input type="submit" value="应用">
-  </form>
-  </div>
-  <iframe name="posthere" frameborder=0 width=0 height=0></iframe>
-  </p>
-
 
   <script>
-    var c_time = new Date();
+    let c_time = new Date();
     str = '时间：';
 
     RQ = c_time.getFullYear() + '-';
